--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 .jumbotron {
   padding-top: 6rem;
   background-color: #e2edff;
+  background-image: url(img/sidebar-3.jpg);
 }
 #projects {
   background-color: #e2edff;
